# todo_server_axum

./: .env  .justfile  Cargo.toml  README.md
.github/workflows/: general.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20221223_184859_create_users_table.rs  m20221223_192625_create_tasks_table.rs  main.rs
src/: app_state.rs  lib.rs  main.rs  routes.rs
src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
src/middleware/: guard.rs
src/queries/: task_queries.rs  user_queries.rs
src/routes/: tasks.rs  users.rs
src/routes/tasks/: create_task.rs  get_all_task.rs  get_task.rs  update_task.rs
src/routes/users/: create_user.rs  login.rs
src/utilities/: app_error.rs  create_task_extractor.rs  jwt.rs  mod.rs
tests/api/: create_user_exists_test.rs  create_user_test.rs  health_check_test.rs  helpers.rs  login_user_test.rs  logout_user_test.rs  main.rs  task.rs  user.rs
tests/api/task/: create_task_test.rs
tests/api/user/: create_user_exists_test.rs  create_user_test.rs  health_check_test.rs  login_user_test.rs  logout_user_test.rs
