[package]
name = "todo_server_axum"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["macros", "headers"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
# use git until "close" method is available on crates.io
sea-orm = { git = "https://github.com/SeaQL/sea-orm", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["json", "cookies", "rustls-tls"] }
migration = { path = "./migration" }
