[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"

[dependencies.sea-orm-migration]
# use git until "close" method is available on crates.io
git = "https://github.com/SeaQL/sea-orm/"
features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
]
